# unified-network-platform

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: API.md  INSTALLATION.md  SKILLS.md  TROUBLESHOOTING.md  VOICE_COMMANDS.md
